<resources>
    <string name="app_name">LibroSwapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navig_libros">NavigLibros</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_libros">Sign in</string>
    <!-- Strings para dialog de felicitaciones -->
    <string name="dialog_happycreate">Felicitaciones, Usuario Creado Correctamente</string>
    <string name="dialog_happyupdate">Felicitaciones, Usuario Recuperado Correctamente</string>
    <!-- Strings para actividad del login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">INICIAR SESIÓN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="text_cuenta"><u>Registrese</u></string>
    <string name="text_cuentarecupera"><u>Olvidaste tu Contraseña?</u></string>


    <!-- String para fragment de registros -->
    <string name="reg_dniUsuario">Ingrese su DNI</string>
    <string name="reg_codUsuario">Ingrese su Codigo Universitario</string>
    <string name="reg_nombres">Ingrese sus Nombres</string>
    <string name="reg_apellidos">Ingrese sus Apellidos</string>
    <string name="reg_correo">Ingrese su Correo</string>
    <string name="reg_skype">Ingrese su Skype (Opcional)</string>
    <string name="reg_direccion">Ingrese su Dirección</string>
    <string name="reg_contraseña">Ingrese su Contraseña</string>
    <string name="reg_contraseñac">Confirme su Contraseña</string>
    <string name="reg_edad">Ingrese su Edad</string>
    <string name="reg_telefono">Ingrese su Telefono (Opcional)</string>
    <string name="reg_celular">Ingrese su Celular</string>
    <string name="reg_genero">Ingrese su Genero</string>
    <string name="reg_intereses">Ingrese sus Intereses</string>
    <string name="reg_contraseñarc">Ingrese su nueva Contraseña</string>
    <string name="reg_contraseñarcc">Repita su nueva Contraseña</string>

    <!-- String para dialog de agregar libros -->
    <string name="regdiag_lsbm">ISBN (Opcional)</string>
    <string name="regdiag_titulo">Titulo del Libro</string>
    <string name="regdiag_autor">Autor de del Libro</string>
    <string name="regdiag_edicion">Edicion (Opcional)</string>
    <string name="regdiag_aniopublicacion">Año de Publ.</string>
    <string name="regdiag_editorial">Editorial del Libro</string>
    <string name="regdiag_portada">Portada del Libro</string>
    <string name="regdiag_portadatxt">Opcional</string>
    <string name="regdiag_descripcion">Descripción del Libro</string>
    <string name="regdiag_estadolibro">Estado del Libro</string>
    <string name="regdiag_ubicacion">Ubicacion del Libro</string>

    <!-- String para dialog de modificar/eliminar libros -->
    <string name="regdiagm_lsbm">Nuevo ISBN</string>
    <string name="regdiagm_titulo">Nuevo Titulo</string>
    <string name="regdiagm_autor">Nuevo Autor</string>
    <string name="regdiagm_edicion">Edicion</string>
    <string name="regdiagm_aniopublicacion">Año de Publ.</string>
    <string name="regdiagm_editorial">Nueva Editorial</string>
    <string name="regdiagm_portada">Portada del Libro</string>
    <string name="regdiagm_portadatxt">Opcional</string>
    <string name="regdiagm_descripcion">Nueva Descripción</string>
    <string name="regdiagm_estadolibro">Estado del Libro</string>
    <string name="regdiagm_ubicacion">Nueva Ubicacion del Libro</string>

    <!-- String para fragment de categorias-->
    <string name="regdiag_categoria">Nueva Categoria para Libros</string>

    <!-- String para fragment de categorias-->
    <string name="cat1">Inteligencia artificial</string>
    <string name="cat2">Arquitectura de computadoras</string>
    <string name="cat3">Cómputo científico</string>
    <string name="cat4">Redes de computadoras</string>
    <string name="cat5">Bases de datos</string>
    <string name="cat6">Informática en salud</string>
    <string name="cat7">Ciencia de la información</string>
    <string name="cat8">Ingeniería de software</string>
    <string name="cat9">Otros</string>

    <!-- String para fragments del menu lateral-->
    <string name="menu_cuenta">Mi Cuenta</string>
    <string name="menu_libros">Mis Libros</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_sesion">Cerrar Sesión</string>
    <string name="menu_listaruser">Listar Usuarios</string>
    <string name="menu_categorias">Categorias</string>
    <string name="menu_listarlibros">Listar Libros</string>
    <string name="menu_actividad">Actividad</string>
    <string name="menu_notificaciones">Solicitudes</string>
    <string name="menu_checkbox1">Activar</string>
    <string name="menu_checkbox2">Suspender</string>
    <string name="menu_checkbox3">Eliminar</string>

    <!-- String para botones de crud-->
    <string name="but_agregar">A</string>
    <string name="but_modificar">M</string>
    <string name="but_eliminar">E</string>

    <!-- String para fragment de descripcion de libros a solicitar-->
    <string name="libdes_txt_isbn">ISBN :</string>
    <string name="libdes_txt_Titulo">Titulo :</string>
    <string name="libdes_txt_Autor">Autor :</string>
    <string name="libdes_txt_Edicion">Edición :</string>
    <string name="libdes_txt_Desc">Descripción :</string>
    <string name="libdes_txt_Dispo">Disponibilidad :</string>
    <string name="libdes_txt_Ubica">Ubicacion del Libro:</string>
    <string name="libdes_txt_Estado">Estado del Libro :</string>
    <string name="libdes_txt_Editorial">Editorial del Libro</string>
    <string name="libdes_txt_CopDue">Codigo del Usuario Portante:</string>
    <string name="libdes_txt_UserDue">Usuario  :</string>
    <string name="libdes_txt_UbicDue">Ubicacion del Usuario :</string>

    <string name="libdes_txt_EstadoUser">Estado :</string>
    <string name="libdes_txt_Correo">Correo :</string>
    <string name="libdes_txt_Skype">Skype :</string>
    <string name="libdes_txt_Direccion">Dirección :</string>
    <string name="libdes_txt_Celular">Celular :</string>
    <string name="libdes_txt_Telefono">Telefono  :</string>
    <string name="libdes_txt_Intereses">Intereses  :</string>

    <string name="libdes_but_Solicitar">Solicitar Libro</string>
    <string name="libdes_but_Cancelar">Cancelar Peticion</string>
    <string name="libdes_but_Prestamo">Telefono  :</string>
    <string name="libdes_but_Rechazar">Intereses  :</string>

    <string name="dialog_libroconfirm">Felicidades, Enviamos su solicitud de prestamo del libro,
    puede ver el estado de  solicitud en el apartado de Mis Solicitudes.</string>

    <string name="account_dniUsuario">Numero de DNI :</string>
    <string name="account_codUsuario">Codigo de Usuario</string>
    <string name="account_correo">Correo :</string>
    <string name="account_skype">Skype :</string>
    <string name="account_direccion">Dirección :</string>
    <string name="account_edad">Edad</string>
    <string name="account_telefono">Telefono :</string>
    <string name="account_celular">Celular :</string>
    <string name="account_genero">Genero :</string>
    <string name="account_intereses">Intereses</string>
    <string name="account_estado">Estado de la Cuenta</string>

    <!-- Strings para items de solicitudes-->
    <string name="text_solicite">Libros que Solicite</string>
    <string name="text_solicitan">Libros que me Solicitan</string>

    <string name="text_idprestamo">Número de Peticion :</string>
    <string name="text_nombrelibro">Nombre del Libro :</string>
    <string name="text_fechaprestamo">Fecha de Solicitud</string>

</resources>
