<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_inicio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/menu_cuenta"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_cuenta" />
        <item
            android:id="@+id/menu_libros"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_libros" />
        <item
            android:id="@+id/menu_sesion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_listarlibros" />
    </group>

    <item android:title="Administrador">
        <menu>
            <item
                android:id="@+id/menu_listarli"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_sesion" />
            <item
                android:id="@+id/menu_categoria"
                android:icon="@drawable/ic_menu_send"
                android:visible="false"
                android:title="@string/menu_categorias" />
            <item
                android:id="@+id/menu_listaruser"
                android:icon="@drawable/ic_menu_share"
                android:visible="false"
                android:title="@string/menu_listarlibros" />
            <item
                android:id="@+id/menu_actividad"
                android:icon="@drawable/ic_menu_send"
                android:visible="false"
                android:title="@string/menu_actividad" />
        </menu>
    </item>

</menu>
