<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentCategoriasDescrip">

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardUseCompatPadding="true"
            android:elevation="100dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:minHeight="?attr/listPreferredItemHeight"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:layout_weight="7">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="@color/colorcheckindigo">
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/libdes_txt_Titulo"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:id="@+id/libdes_titulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/libdes_txt_Autor"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <TextView
                        android:id="@+id/libdes_autor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/libdes_txt_isbn"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <TextView
                        android:id="@+id/libdes_isbn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/libdes_txt_Edicion"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <TextView
                        android:id="@+id/libdes_edicion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/libdes_txt_Editorial"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <TextView
                        android:id="@+id/libdes_editorial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/libdes_txt_Dispo"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <TextView
                        android:id="@+id/libdes_dispon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/libdes_txt_Desc"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <TextView
                        android:id="@+id/libdes_descr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/libdes_txt_Ubica"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <TextView
                        android:id="@+id/libdes_ubic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/libdes_txt_CopDue"
                        />
                    <TextView
                        android:id="@+id/libdes_coduser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/libdes_txt_UserDue"
                        />
                    <TextView
                        android:id="@+id/libdes_nombreuser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/libdes_txt_UbicDue"
                        />
                    <TextView
                        android:id="@+id/libdes_ubicuser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3">

                    <ImageView
                        android:id="@+id/libdes_imgportada"
                        android:layout_width="100dp"
                        android:layout_height="130dp"
                        android:scaleType="fitXY"
                        android:layout_gravity="left"/>
                    <Button
                        android:id="@+id/libdes_but_solicitar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/libdes_but_Solicitar"
                        android:textSize="10sp"
                        android:textColor="@color/colorwhite"
                        android:textStyle="bold"
                        android:theme="@style/MBA"/>
                    <Button
                        android:id="@+id/libdes_but_cancelar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/libdes_but_Cancelar"
                        android:textSize="10sp"
                        android:textColor="@color/colorwhite"
                        android:textStyle="bold"
                        android:theme="@style/MBE"/>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>